--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.19.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,7 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
-    "react-router-dom": "^6.19.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
