--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "build:css": "postcss src/styles/about.css -o public/build/output.css"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.2",
